[package]
name = "pearlbot"
version = "0.1.0"
edition = "2024"
description = "Stasis chamber activation bot for RefinedVanilla"

[dependencies]
anyhow = "1"
azalea = { git = "https://github.com/azalea-rs/azalea", rev = "ddef37118448b639ff56b86ae339e8913cb4ed11" }
futures-util = "0.3.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.52.1", features = ["fs", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
toml = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
